--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
         <item name="colorPrimary">@android:color/transparent</item>
     </style>
 
-    <style name="AppTheme.AppCompat" parent="Theme.AppCompat.NoActionBar">
+    <style name="AppTheme.AppCompat" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
